# smartSockets

./: CMakeLists.txt  README.md
docs/: usage.en.txt  usage.ru.txt
examples/: main_test.cpp
include/: ip.h  port.h  smartSockets.h
src/: ip.cpp  port.cpp  smartSockets.cpp
